fixed backend field alignment (line wrap)

--- a/platforms/common/scss/admin/_settings.scss
+++ b/platforms/common/scss/admin/_settings.scss
@@ -153,6 +153,7 @@
 
     .settings-param-title {
         max-width: 175px;
+        width: 175px;
         margin: 5px;
 
         .particle-label-subtype {
